Fix epigraph CSS bug

--- a/css/default.css
+++ b/css/default.css
@@ -1119,6 +1119,8 @@ blockquote table table {
     font-size: inherit;
     position: relative;
     z-index: 1;
+}
+#markdownBody .epigraph blockquote {
     overflow: visible;
 }
 .epigraph > blockquote {
