--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1492,7 +1492,8 @@ blockquote blockquote blockquote blockquote blockquote blockquote {
 /*=--------------------=*/
 
 @media all and (min-width: 650px) {
-    .abstract blockquote {
+	.abstract blockquote,
+    #markdown .abstract blockquote {
         overflow: hidden;
     }
 }
