--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1164,7 +1164,8 @@ blockquote blockquote blockquote blockquote blockquote blockquote {
 /*=--------------------=*/
 
 @media all and (min-width: 650px) {
-    .abstract blockquote {
+	.abstract blockquote,
+    #markdown .abstract blockquote {
         overflow: hidden;
     }
 }
