--- a/templates/default.html
+++ b/templates/default.html
@@ -111,7 +111,7 @@
               <span id="page-importance"><a href="/About#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span> <br>
               $if(backlinksYes)$<span class="backlinks"><a id="page=backlinks" class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
               $if(similarsYes)$<span class="similars"><a class="similars" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
-              <span class="link-bibliography"><a id="page-link-bibliography" href="#link-bibliography" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>
+              $if(linkbibYes)$<span class="link-bibliography"><a id="page-link-bibliography" href="#link-bibliography" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
           </div>
         </div>
 
@@ -125,9 +125,9 @@
           <h1><a href="#further-reading" title="Link to section: § 'Further Reading'">Further Reading</a></h1>
           <a id="backlinks" href="/metadata/annotations/backlinks/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include">backlinks</a>
         </section>$endif$
-        <section id="link-bibliography" class="level1">
+        $if(linkbibYes)$<section id="link-bibliography" class="level1">
           <h1><a href="#link-bibliography" title="Link to section: § 'Link Bibliography'">Link Bibliography</a></h1>
-          <a id="link-bibliography-link-footer-transclusion" href="/metadata/annotations/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">Link Bibliography</a>
+          <a id="link-bibliography-link-footer-transclusion" href="/metadata/annotations/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">Link Bibliography</a>$endif$
         </section>
         $if(similarsYes)$<section id="similar-links-section" class="level1">
           <h1><a href="#similar-links-section" title="Link to section: § 'Similar Links'">Similar Links</a></h1>
