--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1630,6 +1630,17 @@ span.smallcaps {
     font-feature-settings: 'smcp';
 }
 
+
+/***********/
+/* CONSOLE */
+/***********/
+
+#console.hidden {
+    bottom: calc(-1 * var(--GW-console-view-height));
+    opacity: 0;
+}
+
+
 /*************/
 /* DARK MODE */
 /*************/
