Move sidenotes.js include to inlined-foot template

--- a/includes/inlined-foot.html
+++ b/includes/inlined-foot.html
@@ -5,6 +5,8 @@
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1670283806" defer></script>
+    <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
+    <script src="/static/js/sidenotes.js?v=1669892199" async></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js?v=1670279620" defer></script>
     <script src="/static/js/popins.js?v=1670283498" defer></script>
