--- a/templates/inlined-foot-template.html
+++ b/templates/inlined-foot-template.html
@@ -5,6 +5,8 @@
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js" defer></script>
+    <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
+    <script src="/static/js/sidenotes.js" async></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js" defer></script>
     <script src="/static/js/popins.js" defer></script>
