Add additional asset versioning

--- a/templates/default.html
+++ b/templates/default.html
@@ -13,6 +13,9 @@
     <!-- SSI: Inlined mappings of SVG linkicon identifiers to SVG files -->
     <!-- INLINED-GRAPHICAL-LINKICON-STYLES-BEGIN --><!--#include virtual="/static/includes/inlined-graphical-linkicon-styles.html" --><!-- INLINED-GRAPHICAL-LINKICON-STYLES-END -->
 
+	<!-- SSI: Inlined asset versions -->
+	<!-- INLINED-ASSET-VERSIONS-BEGIN--><!--#include virtual="/static/includes/inlined-asset-versions.html" --><!-- INLINED-ASSET-VERSIONS-END -->
+
     $if(index)$
     <!-- Google Webmaster requires this tag, but only on the index/homepage -->
     <meta name="google-site-verification" content="BOhOQI1uMfsqu_DopVApovk1mJD5ZBLfan0s9go3phk" />
