--- a/includes/inlined-foot.html
+++ b/includes/inlined-foot.html
@@ -18,11 +18,11 @@
     <script src="/static/js/extracts-content.js?v=1670011888" defer></script>
     <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
 
-    <!-- Misc JS: 1. Collapsed sections: insert a toggle to expand them; 2. cover source-code block listings too (for large R sections especially); 3. type setting stuff -->
+    <!-- Misc JS -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
     <script src="/static/js/typography.js?v=1667673751" defer></script>
-    <script src="/static/js/rewrite.js?v=1670373283" defer></script>
-    <script src="/static/js/transclude.js?v=1670427870" defer></script>
+    <script src="/static/js/rewrite.js?v=1670449939" defer></script>
+    <script src="/static/js/transclude.js?v=1670448843" defer></script>
     <script src="/static/js/collapse.js?v=1670098365" defer></script>
 
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
