--- a/templates/inlined-foot-template.html
+++ b/templates/inlined-foot-template.html
@@ -18,7 +18,7 @@
     <script src="/static/js/extracts-content.js" defer></script>
     <script src="/static/js/extracts-options.js" defer></script>
 
-    <!-- Misc JS: 1. Collapsed sections: insert a toggle to expand them; 2. cover source-code block listings too (for large R sections especially); 3. type setting stuff -->
+    <!-- Misc JS -->
 	<script src="/static/js/Hyphenopoly_Loader.js" defer></script>
     <script src="/static/js/typography.js" defer></script>
     <script src="/static/js/rewrite.js" defer></script>
