popup title frame: swap order of '[ARCHIVED] · ': we present it as ' [HTML]' etc in the body, so more consistent and the '[ARCHIVED]' is lower-priority so should be appended rather than prepended

--- a/templates/include/pop-frame-title-annotation.tmpl
+++ b/templates/include/pop-frame-title-annotation.tmpl
@@ -1,21 +1,21 @@
 <[IF originalURL]>
-[<a
-	class="popframe-title-link-archived"
-	title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
-    href="<{titleLinkHref}>"
-	target="<{linkTarget}>"
-		>ARCHIVED</a>]<span class="separator">·</span>
 <a
-	class="popframe-title-link"
-	title="Open <{originalURL}> in <{whichTab}> <{tabOrWindow}>."
-	href="<{originalURL}>"
-	target="<{linkTarget}>"
-		><{popFrameTitleText}></a>
+    class="popframe-title-link"
+    title="Open <{originalURL}> in <{whichTab}> <{tabOrWindow}>."
+    href="<{originalURL}>"
+    target="<{linkTarget}>"
+        ><{popFrameTitleText}></a><span class="separator">·</span>
+[<a
+    class="popframe-title-link-archived"
+    title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
+    href="<{titleLinkHref}>"
+    target="<{linkTarget}>"
+        >ARCHIVED</a>]
 <[ELSE]>
 <a
-	class="popframe-title-link"
-	href="<{titleLinkHref}>"
-	title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
-	target="<{linkTarget}>"
-		><{popFrameTitleText}></a>
+    class="popframe-title-link"
+    href="<{titleLinkHref}>"
+    title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
+    target="<{linkTarget}>"
+        ><{popFrameTitleText}></a>
 <[IFEND]>
